[gd_scene load_steps=27 format=3 uid="uid://cr2ersq7g6q6f"]

[ext_resource type="Script" uid="uid://0e27yrlf8w80" path="res://scripts/player/Player.gd" id="1_hn6di"]
[ext_resource type="Script" uid="uid://cf465dgqafdbt" path="res://scripts/player/SpringArmPivot.gd" id="2_f8ihf"]
[ext_resource type="Texture2D" uid="uid://cssevliax3ykc" path="res://assets/sprites/player/idle_up.png" id="3_qhqgy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("3_qhqgy")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("3_qhqgy")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("3_qhqgy")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("3_qhqgy")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("3_qhqgy")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("3_qhqgy")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("3_qhqgy")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("3_qhqgy")
region = Rect2(128, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_f1ej7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_k6p7c"]
radius = 0.283343
height = 1.3747818

[sub_resource type="Animation" id="Animation_dqkch"]
resource_name = "idle up"
step = 0.0333333

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qlg0r"]
_data = {
&"idle up": SubResource("Animation_dqkch")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dfvqk"]
animation = &"Air/mixamo_com"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_oprun"]
animation = &"Sword And Shield Slash/mixamo_com"
use_custom_timeline = true
timeline_length = 0.5
stretch_time_scale = true
start_offset = 0.0
loop_mode = 0

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_u51wd"]
animation = &"Idle/mixamo_com"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2dl1e"]
animation = &"Run/mixamo_com"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yfirh"]
animation = &"Walk/mixamo_com"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jej6c"]
animation = &"Jumping Up(1)/mixamo_com"
use_custom_timeline = true
timeline_length = 0.8
stretch_time_scale = true
start_offset = 0.0
loop_mode = 0

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_f1ej7"]
input_0/name = "locomotion"
input_0/auto_advance = false
input_0/break_loop_at_end = false
input_0/reset = true
input_1/name = "dash"
input_1/auto_advance = false
input_1/break_loop_at_end = true
input_1/reset = true
input_2/name = "attack"
input_2/auto_advance = false
input_2/break_loop_at_end = true
input_2/reset = true

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_hbu2o"]
xfade_time = 0.2
input_0/name = "grounded"
input_0/auto_advance = false
input_0/break_loop_at_end = false
input_0/reset = true
input_1/name = "air"
input_1/auto_advance = false
input_1/break_loop_at_end = false
input_1/reset = true

[sub_resource type="AnimationNodeBlend3" id="AnimationNodeBlend3_3c3it"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_rsvoc"]
nodes/output/position = Vector2(1080, 160)
nodes/Air/node = SubResource("AnimationNodeAnimation_dfvqk")
nodes/Air/position = Vector2(420, 400)
nodes/Idle/node = SubResource("AnimationNodeAnimation_u51wd")
nodes/Idle/position = Vector2(200, 60)
nodes/Run/node = SubResource("AnimationNodeAnimation_2dl1e")
nodes/Run/position = Vector2(200, 400)
nodes/Walk/node = SubResource("AnimationNodeAnimation_yfirh")
nodes/Walk/position = Vector2(200, 220)
nodes/ground_air_transition/node = SubResource("AnimationNodeTransition_hbu2o")
nodes/ground_air_transition/position = Vector2(600, 140)
nodes/iwr_blend/node = SubResource("AnimationNodeBlend3_3c3it")
nodes/iwr_blend/position = Vector2(440, 140)
nodes/dash/node = SubResource("AnimationNodeTransition_f1ej7")
nodes/dash/position = Vector2(920, 180)
"nodes/dash anim/node" = SubResource("AnimationNodeAnimation_jej6c")
"nodes/dash anim/position" = Vector2(620, 380)
nodes/Animation/node = SubResource("AnimationNodeAnimation_oprun")
nodes/Animation/position = Vector2(600, 540)
node_connections = [&"output", 0, &"dash", &"ground_air_transition", 0, &"iwr_blend", &"ground_air_transition", 1, &"Air", &"iwr_blend", 0, &"Idle", &"iwr_blend", 1, &"Walk", &"iwr_blend", 2, &"Run", &"dash", 0, &"ground_air_transition", &"dash", 1, &"dash anim", &"dash", 2, &"Animation"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_jej6c"]
height = 0.51293945
radius = 0.3076172

[node name="Player" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1_hn6di")

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(1.5685437, 0, 0, 0, 1.5685437, 0, 0, 0, 1.5685437, 0, 0.49944216, 0)
billboard = 2
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_f1ej7")
animation = &"idle"
frame_progress = 0.65461254

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.59712166, 0, 0, 0, 0.59712166, 0, 0, 0, 0.59712166, 0, 0.4180966, 0)
shape = SubResource("CapsuleShape3D_k6p7c")

[node name="SpringArmPivot" type="Node3D" parent="."]
transform = Transform3D(0.59712166, 0, 0, 0, 0.59712166, 0, 0, 0, 0.59712166, 0, 0.008201271, 0)
script = ExtResource("2_f8ihf")

[node name="SpringArm3D" type="SpringArm3D" parent="SpringArmPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.1793268, 0)
spring_length = 6.0

[node name="Camera3D" type="Camera3D" parent="SpringArmPivot/SpringArm3D"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_qlg0r")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
active = false
callback_mode_process = 0
tree_root = SubResource("AnimationNodeBlendTree_rsvoc")
anim_player = NodePath("../AnimationPlayer")
parameters/ground_air_transition/current_state = "grounded"
parameters/ground_air_transition/transition_request = ""
parameters/ground_air_transition/current_index = 0
parameters/iwr_blend/blend_amount = -1.0
parameters/dash/current_state = "locomotion"
parameters/dash/transition_request = ""
parameters/dash/current_index = 0

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="DashCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6114502, -0.30649722)
shape = SubResource("CylinderShape3D_jej6c")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
